--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-blablacar/target/
-blablacar-parent/target/
-blablacar-parent/blablacar-persistence/target/
-blablacar-parent/.idea
+*/target/
+*.idea
 *.iml
 .DS_Store
