--- a/blablacar-persistence/pom.xml
+++ b/blablacar-persistence/pom.xml
@@ -40,34 +40,34 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>org.hibernate</groupId>-->
-			<!--<artifactId>hibernate-entitymanager</artifactId>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.hibernate.validator</groupId>-->
-			<!--<artifactId>hibernate-validator</artifactId>-->
-		<!--</dependency>-->
-		<!-- <dependency> -->
-		<!-- <groupId>javax.inject</groupId> -->
-		<!-- <artifactId>javax.inject</artifactId> -->
-		<!-- <version>1</version> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+		 <dependency> 
+		 <groupId>javax.inject</groupId> 
+		 <artifactId>javax.inject</artifactId> 
+		 <version>1</version> 
+		 </dependency> 
 
-		<!-- <dependency> -->
-		<!-- <groupId>javax.enterprise</groupId> -->
-		<!-- <artifactId>cdi-api</artifactId> -->
-		<!-- <version>1.2</version> -->
-		<!-- </dependency> -->
+		 <dependency> 
+		 <groupId>javax.enterprise</groupId> 
+		 <artifactId>cdi-api</artifactId> 
+		 <version>1.2</version> 
+		 </dependency>
 		<dependency>
 			<groupId>javax.el</groupId>
 			<artifactId>javax.el-api</artifactId>
 			<version>3.0.0</version>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>org.springframework</groupId>-->
-			<!--<artifactId>spring-core</artifactId>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.glassfish.web</groupId>
 			<artifactId>javax.el</artifactId>
@@ -93,18 +93,18 @@
 		<!--</dependency>-->
 
 		<!--&lt;!&ndash; For embedded usage &ndash;&gt;-->
-		<!--<dependency>-->
-			<!--<groupId>org.apache.derby</groupId>-->
-			<!--<artifactId>derby</artifactId>-->
-			<!--<version>10.10.2.0</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>junit</groupId>-->
-			<!--<artifactId>junit</artifactId>-->
-			<!--<version>4.12</version>-->
-			<!--<scope>test</scope>-->
-			<!--<type>jar</type>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.10.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+			<type>jar</type>
+		</dependency>
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>eclipselink</artifactId>
