--- a/blablacar-persistence/pom.xml
+++ b/blablacar-persistence/pom.xml
@@ -48,17 +48,17 @@
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 		</dependency>
-		 <dependency> 
-		 <groupId>javax.inject</groupId> 
-		 <artifactId>javax.inject</artifactId> 
-		 <version>1</version> 
-		 </dependency> 
+		 <!--<dependency>-->
+		 <!--<groupId>javax.inject</groupId>-->
+		 <!--<artifactId>javax.inject</artifactId>-->
+		 <!--<version>1</version>-->
+		 <!--</dependency>-->
 
-		 <dependency> 
-		 <groupId>javax.enterprise</groupId> 
-		 <artifactId>cdi-api</artifactId> 
-		 <version>1.2</version> 
-		 </dependency>
+		 <!--<dependency>-->
+		 <!--<groupId>javax.enterprise</groupId>-->
+		 <!--<artifactId>cdi-api</artifactId>-->
+		 <!--<version>1.2</version>-->
+		 <!--</dependency>-->
 		<dependency>
 			<groupId>javax.el</groupId>
 			<artifactId>javax.el-api</artifactId>
@@ -105,17 +105,17 @@
 			<scope>test</scope>
 			<type>jar</type>
 		</dependency>
-		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>eclipselink</artifactId>
-			<version>2.5.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
-			<version>2.5.2</version>
-			<scope>provided</scope>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.eclipse.persistence</groupId>-->
+			<!--<artifactId>eclipselink</artifactId>-->
+			<!--<version>2.5.2</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>org.eclipse.persistence</groupId>-->
+			<!--<artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>-->
+			<!--<version>2.5.2</version>-->
+			<!--<scope>provided</scope>-->
+		<!--</dependency>-->
 
 	</dependencies>
 </project>
