--- a/blablacar-persistence/pom.xml
+++ b/blablacar-persistence/pom.xml
@@ -117,5 +117,10 @@
 			<!--<scope>provided</scope>-->
 		<!--</dependency>-->
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>r05</version>
+		</dependency>
 	</dependencies>
 </project>
