pom.xml for blablacar-api & blablacar-service

--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,8 @@
 
     <modules>
         <module>blablacar-persistence</module>
+        <module>blablacar-api</module>
+        <module>blablacar-service</module>
+
     </modules>
 </project>
