--- a/blablacar-persistence/pom.xml
+++ b/blablacar-persistence/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>cz.muni.fi.pa165</groupId>
-        <artifactId>blablacar</artifactId>
+        <artifactId>blablacar-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
