--- a/blablacar-persistence/pom.xml
+++ b/blablacar-persistence/pom.xml
@@ -137,6 +137,8 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>1</version>
+            <scope>test</scope>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
