--- a/blablacar-api/pom.xml
+++ b/blablacar-api/pom.xml
@@ -14,8 +14,9 @@
         <groupId>cz.muni.fi.pa165</groupId>
         <artifactId>blablacar-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath/>
     </parent>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
@@ -50,12 +51,6 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <scope>test</scope><!-- logging implementation should not be part of a library, but is needed for tests -->
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.1</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
