--- a/blablacar-service/pom.xml
+++ b/blablacar-service/pom.xml
@@ -81,7 +81,12 @@
             <artifactId>mail</artifactId>
             <version>1.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.8.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
