--- a/blablacar-api/pom.xml
+++ b/blablacar-api/pom.xml
@@ -6,7 +6,7 @@
     <groupId>cz.muni.fi.pa165</groupId>
     <artifactId>blablacar-api</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>Blablacar-api</name>
 
