--- a/blablacar-service/pom.xml
+++ b/blablacar-service/pom.xml
@@ -6,7 +6,7 @@
     <groupId>cz.muni.fi.pa165</groupId>
     <artifactId>blablacar-service</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>Blablacar-service</name>
 
@@ -80,6 +80,11 @@
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
             <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
