--- a/blablacar-spring-mvc/pom.xml
+++ b/blablacar-spring-mvc/pom.xml
@@ -91,6 +91,12 @@
             <artifactId>spring-security-config</artifactId>
             <version>5.0.8.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>cz.muni.fi.pa165</groupId>
+            <artifactId>sample-data</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
