--- a/blablacar-spring-mvc/pom.xml
+++ b/blablacar-spring-mvc/pom.xml
@@ -93,7 +93,7 @@
         </dependency>
         <dependency>
             <groupId>cz.muni.fi.pa165</groupId>
-            <artifactId>sample-data</artifactId>
+            <artifactId>blablacar-sample-data</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
