--- a/blablacar-spring-mvc/src/main/webapp/WEB-INF/web.xml
+++ b/blablacar-spring-mvc/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,24 @@
-<web-app version = "2.4"
+<web-app version = "2.5"
          xmlns = "http://java.sun.com/xml/ns/j2ee"
          xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation = "http://java.sun.com/xml/ns/j2ee
-   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+   http://java.sun.com/xml/ns/j2ee/web-app_2_5.xsd">
 
     <display-name>Spring MVC Application</display-name>
+
+    <servlet>
+        <servlet-name>UserActionServlet</servlet-name>
+        <displayable-name xml:lang="en">My Servlet</displayable-name>
+        <description>The Servlet</description>
+        <servlet-class>Servlet.UserActionServlet</servlet-class>
+    </servlet>
+
+
+    <!-- The mapping for the JSP servlet -->
+    <servlet-mapping>
+        <servlet-name>jsp</servlet-name>
+        <url-pattern>*.jsp</url-pattern>
+    </servlet-mapping>
 
     <resource-ref>
         <description>BlablaCar Web App</description>
