change module name, comment.driveId

--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
         <module>blablacar-persistence</module>
         <module>blablacar-service</module>
         <module>blablacar-api</module>
-        <module>blablacar-spring-mvc</module>
+        <module>web</module>
         <module>sample-data</module>
     </modules>
 </project>
