--- a/web/pom.xml
+++ b/web/pom.xml
@@ -27,6 +27,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+        <groupId>cglib</groupId>
+        <artifactId>cglib</artifactId>
+        <version>3.1</version>
+    </dependency>
+        <dependency>
             <groupId>cz.muni.fi.pa165</groupId>
             <artifactId>blablacar-service</artifactId>
             <version>${project.parent.version}</version>
